fix: output formats
